re PR libstdc++/16813 (compiler error in DEBUG version of range insertion std::map::insert)

2004-07-29  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/16813
	* include/debug/map.h (insert(_InputIterator, _InputIterator)):
	Fix typo.
	* testsuite/23_containers/map/insert/16813.cc: New.

From-SVN: r85298